--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
                         <div class="input-wrapper">
                             <label for="mail">Email</label>
-                            <input type="email" id="mail" name="mail" placeholder="Digite seu email" required>
+                            <input type="email" id="mail" name="mail" placeholder="Digite seu email">
                             <div class="error">
                                 <img src="./assets/icons/alert-circle.svg" alt="ícone de alerta vermelho">
                                 <span>Insira um e-mail válido</span>
