--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
 
                     <fieldset class="enroll-options">
                         <legend>Opções de matrícula</legend>
+
                         <div class="input-wrapper">
                             <label>Selecione o turno de estudo</label>
                             <div class="radio-wrapper">
@@ -155,6 +156,48 @@
                                     <input type="radio" name="study-shift" value="evening" id="evening">
                                     <img src="./assets/icons/sun-02.svg" alt="Ícone de sol">
                                     <label for="evening">Tarde</label>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="input-wrapper">
+                            <label>Em qual esporte você gostaria de inscrever seu filho?</label>
+                            <div class="radio-wrapper">
+                                <div class="radio-inner">
+                                    <div class="radio-image"></div>
+                                    <input type="radio" name="sport" value="soccer" id="soccer">
+                                    <img src="./assets/icons/football.svg" alt="Ícone de futebol">
+                                    <label for="soccer">Futebol</label>
+                                </div>
+                                <div class="radio-inner">
+                                    <div class="radio-image"></div>
+                                    <input type="radio" name="sport" value="basket" id="basket">
+                                    <img src="./assets/icons/basketball-02.svg" alt="Ícone de bola de basquete">
+                                    <label for="basket">Basquete</label>
+                                </div>
+                                <div class="radio-inner">
+                                    <div class="radio-image"></div>
+                                    <input type="radio" name="sport" value="swimming" id="swimming">
+                                    <img src="./assets/icons/swimming.svg" alt="Ícone uma pessoa nadando">
+                                    <label for="swimming">Natação</label>
+                                </div>
+                                <div class="radio-inner">
+                                    <div class="radio-image"></div>
+                                    <input type="radio" name="sport" value="yoga" id="yoga">
+                                    <img src="./assets/icons/yoga-02.svg" alt="Ícone de uma pessoa meditando">
+                                    <label for="yoga">Yoga</label>
+                                </div>
+                                <div class="radio-inner">
+                                    <div class="radio-image"></div>
+                                    <input type="radio" name="sport" value="volleyball" id="volleyball">
+                                    <img src="./assets/icons/volleyball.svg" alt="Ícone de uma bola de vôlei">
+                                    <label for="volleyball">Vôlei</label>
+                                </div>
+                                <div class="radio-inner">
+                                    <div class="radio-image"></div>
+                                    <input type="radio" name="sport" value="boxing" id="boxing">
+                                    <img src="./assets/icons/boxing-glove-01.svg" alt="Ícone de uma luva de boxe">
+                                    <label for="boxing">Boxe</label>
                                 </div>
                             </div>
                         </div>
