--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
                         <div class="input-wrapper">
                             <label for="mail">Email</label>
-                            <input type="email" id="mail" name="mail" placeholder="Digite seu email">
+                            <input type="email" id="mail" name="mail" placeholder="Digite seu email" required>
                             <div class="error">
                                 <img src="./assets/icons/alert-circle.svg" alt="ícone de alerta vermelho">
                                 <span>Insira um e-mail válido</span>
@@ -207,6 +207,16 @@
                         <div class="checkbox-image"></div>
                         <input type="checkbox" name="terms" id="terms">
                         <label for="terms">Declaro que li e concordo com os <strong>Termos e Condições</strong> e com a <strong>Política de Privacidade</strong> da escola Estrela do Amanhã. </label>
+                    </div>
+
+                    <div class="actions-wrapper">
+                        <button class="btn-secondary" type="button">
+                            Salvar respostas
+                        </button>
+
+                        <button class="btn-primary" type="submit">
+                            Fazer matrícula
+                        </button>
                     </div>
                 </form>
             </div>
